--- a/resume.tex
+++ b/resume.tex
@@ -1,93 +1,85 @@
 %header
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage[left=0.85in,top=0.6in,right=0.85in,bottom=0.6in]{geometry} % Document margins
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
 \name{Jonathan Wilding} % Your name
 
-\address{jonathan.r.wilding@gmail.com \\ (385)482-5644 \\
-linkedin.com/in/jonathan-wilding}
-
+\address{jonathan.r.wilding@gmail.com $\diamond\;$ (385)482-5644 }%\\} % 
+\address{jonathanwilding.com $\diamond\;$linkedin.com/in/j-wilding $\diamond\;$ github.com/j-wilding}
 \begin{document}
 
 %education
 \begin{rSection}{Education}
 
-    {\bf B.S., Mathematics }\hfill {Apr. 2021} \\
+{\bf B.S., Mathematics }\hfill {Apr. 2021} \\
 \textit{Brigham Young University, Provo, UT}
     \begin{itemize}
         \item Computer Science Emphasis
-        \item Lucid Software U of U and BYU Programming Competition      \hfill {Oct. 2019}
-        \item 4th Place Google Tech Challenge \hfill {Feb. 2020}
+        \item Lucid Software Programming Competition       \hfill {Oct. 2018 - Oct. 2020}
         \item Relevant Coursework:
         \item[]
-            \begin{tabular}{l l}
-                Data Structures & Discrete Mathematics   \\ 
-                Mathematical Programming & Computation and Optimization 
-            \end{tabular}
+            \begin{enumerate}
+                \item[] Web Programming (HTML/CSS/JS/Node)
+                \item[] Data Structures (C++/Python)
+                \item[] Intro to Networking (Security/Internet Protocols/OSI)
+            \end{enumerate}
     \end{itemize}
 \end{rSection}
 
 %skills
 \begin{rSection}{Skills}
-    \begin{itemize}
-        \item Proficient in:
-        \item[]
-        \begin{tabular}{ l l l }
-	Python     & SQL    & Bash \\
- 	HTML 	      & CSS    & JavaScript \\
-            SSH         & Unix   & Data Structures  \\
-            C++        & Vim    & \LaTeX  \\
-            Matplotlib & NumPy & Scipy \\
-            Gradient Descent & Numerical Linear Algebra  & Singular Value Decomposition
+        \begin{tabular}{ l l l l l }
+            React.js    & Data Structures & CSS & HTML & JavaScript \\
+            Bootstrap   & SQL             & SSH  & Network Security & Linux  \\
+            Python      & Django          & Bash         & Vim & \LaTeX  
         \end{tabular}
-    \end{itemize}
 \end{rSection}
 
 \begin{rSection}{Experience}
-\textbf{Materials Science Machine Learning Research Assistant} \hfill{Oct. 2019
+    \textbf{Web Development Research Assistant}\hfill{ Sept.  2020 -
+    Present}\\
+    \textit{Information Systems Dept., Brigham Young University, Provo, UT} 
+    \begin{itemize}
+        \item Developed a web application to collect data on multitasking using React.js and
+            bootstrap with a Django REST API on the backend. 
+    \end{itemize}
+\textbf{Machine Learning Research Assistant} \hfill{Oct. 2019
 - Jun. 2020}\\
 \textit{Mechanical Engineering Dept., Brigham Young University, Provo, UT}
     \begin{itemize}
-        % \item Uses python to generate and compare SOAP vectors (Smooth Overlap of
-        % Atomic Positions) in order to increase computing efficiency.  
-        \item Configured and maintained Jupyterhub/Apache server for a team of
-            several data scientists
-        \item Created Bash and Python scripts to automate supercomputing jobs
+        \item Configured and maintained Jupyterhub server with Apache for a team of
+            several data scientists.
     \end{itemize}
 \textbf{Mongolian Teacher} \hfill {Sep. 2018 - Sep. 2019}\\
 \textit{Missionary Training Center, Provo, UT} 
     \begin{itemize}
         \item Created and maintained a website for the area to simplify and
-            centralize resources and materials
-        \item Increased focus on student success by leading weekly meetings
+            centralize resources and materials.
     \end{itemize}
 \textbf{Product Quality Control and Regulatory Teammate}    \hfill {Jan. 2018 -
 Apr. 2018}\\
 \textit{Golub Corporation, Schenectady, NY}                 \hfill {Jan. 2015 -
 Dec. 2015}  
     \begin{itemize}
-        \item Built JavaScript web application for managers 
-        \item Increased efficiency over 300\% using Microsoft VBA
+        \item Built JavaScript web application for managers.
     \end{itemize}
 \end{rSection}
 
 %Projects
 \begin{rSection}{Projects}
+    \textbf{Responsive Photography Website} \hfill{Jan. 2021}
+    \begin{itemize}
+        \item Built a multi-page, responsive photography website with image gallery using CSS Grid and
+            Bootstrap.
+    \end{itemize}
 \textbf{Regex} \hfill{Feb. 2020}
     \begin{itemize}
         \item Organized over 1000 unstructured personnel records into a
-            dictionary with regex and python
+            dictionary with regex and python.
     \end{itemize}
-%\textbf{Linux} \hfill{Feb. 2020}
-%    \begin{itemize}
-%        \item Configured and personalized Linux desktop environment with Bash scripts
-%            and automation
-%    \end{itemize}
 \end{rSection}
-
-%Relevant experience
 
 \end{document}
