--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,7 @@
 %header
 \documentclass{resume} % Use the custom resume.cls style
 \usepackage{paralist}
+\usepackage{hyperref}
 
 \usepackage[left=0.75in,top=0.5in,right=0.75in,bottom=0.5in]{geometry} % Document margins
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
@@ -9,7 +10,9 @@
 \name{Jonathan Wilding} % Your name
 
 \address{jonathan.r.wilding@gmail.com $\diamond\;$ (385)482-5644 }%\\} % 
-\address{jonathanwilding.com $\diamond\;$linkedin.com/in/j-wilding $\diamond\;$ github.com/j-wilding}
+\address{\href{http://www.jonathanwilding.com}{jonathanwilding.com} $\diamond\;$
+\href{https://www.linkedin.com/in/j-wilding}{linkedin.com/in/j-wilding} $\diamond\;$
+\href{https://www.github.com/j-wilding}{github.com/j-wilding}}
 \begin{document}
 
 %education
@@ -40,7 +43,7 @@
 \end{rSection}
 
 \begin{rSection}{Experience}
-    \textbf{Web Development Research Assistant}\hfill{ Sept.  2020 -
+    \textbf{Web Development Research Assistant}\hfill{ Sep.  2020 -
     Present}\\
     \textit{Information Systems Dept., Brigham Young University, Provo, UT} 
     \begin{compactitem}
@@ -78,25 +81,21 @@ Dec. 2015}
 
 %Projects
 \begin{rSection}{Projects}
-    \textbf{Multiple Choice Form Content Management System} \hfill{Apr. 2021}
+    \textbf{Multiple Choice Form Content Management System}
+    (\href{https://forms.jonathanwilding.com}{forms.jonathawilding.com}) \hfill{Apr. 2021}
     \begin{compactitem}
         \item Developed a multiple-choice form creation and management system, with a Vue.js
             frontend and an Express.js and MongoDB back-end.
     \end{compactitem}
-    \textbf{The Movie Game} \hfill{Mar. 2021}
+    \textbf{The Movie Game} (\href{https://movies.jonathanwilding.com}{movies.jonathanwilding.com}) \hfill{Mar. 2021}
     \begin{compactitem}
         \item Created an actor-movie game with JavaScript, which queries the TMDB api.
     \end{compactitem}
-    \textbf{Responsive Photography Website} \hfill{Jan. 2021}
+    \textbf{Responsive Photography Website} (\href{https://photo.jonathanwilding.com}{photo.jonathanwilding.com}) \hfill{Jan. 2021}
     \begin{compactitem}
         \item Built a multi-page, responsive photography website with image gallery using CSS Grid and
             Bootstrap.
     \end{compactitem}
-%\textbf{Regex} \hfill{Feb. 2020}
-%    \begin{itemize}
-%        \item Organized over 1000 unstructured personnel records into a
-%            dictionary with regex and python.
-%    \end{itemize}
 \end{rSection}
 
 \end{document}
