new updates and resume adjustments

--- a/resume.tex
+++ b/resume.tex
@@ -17,10 +17,10 @@
 
 %education
 \begin{rSection}{Education}
-{\bf B.S., Mathematics }\hfill {Apr. 2021} \\
+{\bf B.S., Mathematics }\hfill {Apr. 2018 - Apr. 2021} \\
 \textit{Brigham Young University, Provo, UT}
     \begin{compactitem}
-        \item Computer Science Emphasis
+        \item Software Development Emphasis
         %\item Lucid Software Programming Competition       \hfill {Oct. 2018 - Oct. 2020}
         %\item Relevant Coursework:
         %\item[]
@@ -34,31 +34,28 @@
 
 %skills
 \begin{rSection}{Skills}
-        \begin{tabular}{ l l l l l }
-            Vue.js & Node.js     & MongoDB  & Express.js & React.js  \\  
-            Python & Tailwindcss &  CSS & HTML & JavaScript \\
-            Bootstrap & SQLite   & SSH  & Network Security & Linux  \\
-            Django & Data Structures & Bash & Vim & \LaTeX  
+        \begin{tabular}{ l l l l l l l }
+            Vue.js & Node.js     & MongoDB  & Express.js & React.js   & SQLite   &  Linux\\  
+            Python & Tailwindcss &  CSS & HTML & JavaScript &  Django & Data Structures
         \end{tabular}
 \end{rSection}
 
 \begin{rSection}{Experience}
-    \textbf{Web Development Research Assistant}\hfill{ Sep.  2020 -
-    Present}\\
+    \textbf{Web Development Research Assistant}\hfill{ Sep.  2020 - May 2021}\\
     \textit{Information Systems Dept., Brigham Young University, Provo, UT} 
     \begin{compactitem}
         %\setlength\itemsep{0em}
         \item Designed experiment for the testing and analysis of participant multitasking
             performances.
-        \item Created web application to execute the above experiment using Vue.js, Express
-            and MongoDB.
-        \item Attended weekly meetings and provided weekly status reports.
+        \item Developed a web application to execute the above experiment using Vue.js, Express.js, and
+            MongoDB.
+        \item Presented progress in weekly stand-up meetings.
     \end{compactitem}
 \textbf{Machine Learning Research Assistant} \hfill{Oct. 2019
 - Jun. 2020}\\
 \textit{Mechanical Engineering Dept., Brigham Young University, Provo, UT}
     \begin{compactitem}
-        \item Configured and maintained Jupyterhub server with Apache for a team of
+        \item Built and maintained a Jupyter Notebook server with an Apache reverse proxy for a team of
             several data scientists.
     \end{compactitem}
 \textbf{Mongolian Teacher} \hfill {Sep. 2018 - Sep. 2019}\\
@@ -73,8 +70,8 @@ Apr. 2018}\\
 \textit{Golub Corporation, Schenectady, NY}                 \hfill {Jan. 2015 -
 Dec. 2015}  
     \begin{compactitem}
-        \item Built JavaScript web application for several managers to automate nutrition label
-            rejection process.
+        \item Built JavaScript web application for several managers to automate the new nutrition label
+            validation process.
         \item Improved data entry efficiency over 300\% with Microsoft VBA scripting.
     \end{compactitem}
 \end{rSection}
@@ -84,16 +81,16 @@ Dec. 2015}
     \textbf{Multiple Choice Form Content Management System}
     (\href{https://forms.jonathanwilding.com}{forms.jonathawilding.com}) \hfill{Apr. 2021}
     \begin{compactitem}
-        \item Developed a multiple-choice form creation and management system, with a Vue.js
-            frontend and an Express.js and MongoDB back-end.
+        \item Developed a full-stack, multiple-choice form creation and management system, with
+            Vue.js, Express.js and MongoDB.
     \end{compactitem}
     \textbf{The Movie Game} (\href{https://movies.jonathanwilding.com}{movies.jonathanwilding.com}) \hfill{Mar. 2021}
     \begin{compactitem}
-        \item Created an actor-movie game with JavaScript, which queries the TMDB api.
+        \item Created a front-end actor-movie game with JavaScript, which queries the TMDB api.
     \end{compactitem}
     \textbf{Responsive Photography Website} (\href{https://photo.jonathanwilding.com}{photo.jonathanwilding.com}) \hfill{Jan. 2021}
     \begin{compactitem}
-        \item Built a multi-page, responsive photography website with image gallery using CSS Grid and
+        \item Built a multi-page, responsive photography website with image gallery using HTML, CSS Grid and
             Bootstrap.
     \end{compactitem}
 \end{rSection}
