new updates and resume adjustments

--- a/resume.tex
+++ b/resume.tex
@@ -36,7 +36,8 @@
 \begin{rSection}{Skills}
         \begin{tabular}{ l l l l l l l }
             Vue.js & Node.js     & MongoDB  & Express.js & React.js   & SQLite   &  Linux\\  
-            Python & Tailwindcss &  CSS & HTML & JavaScript &  Django & Data Structures
+            Python & Tailwindcss &  CSS & HTML & JavaScript &  Django & Data Structures \\
+            git 
         \end{tabular}
 \end{rSection}
 
