--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,7 @@ Dec. 2015}
 %Projects
 \begin{rSection}{Projects}
     \textbf{Multiple Choice Form Content Management System}
-    (\href{https://forms.jonathanwilding.com}{forms.jonathawilding.com}) \hfill{Apr. 2021}
+    (\href{https://forms.jonathanwilding.com}{forms.jonathanwilding.com}) \hfill{Apr. 2021}
     \begin{compactitem}
         \item Developed a full-stack, multiple-choice form creation and management system, with
             Vue.js, Express.js and MongoDB.
