--- a/tex/amazon-support.tex
+++ b/tex/amazon-support.tex
@@ -21,14 +21,6 @@
 \textit{Brigham Young University, Provo, UT}
     \begin{compactitem}
         \item Software Development Emphasis
-        %\item Lucid Software Programming Competition       \hfill {Oct. 2018 - Oct. 2020}
-        %\item Relevant Coursework:
-        %\item[]
-        %    \begin{enumerate}
-        %        \item[] Web Programming (HTML/CSS/JS/Node)
-        %        \item[] Data Structures (C++/Python)
-        %        \item[] Intro to Networking (Security/Internet Protocols/OSI)
-        %    \end{enumerate}
     \end{compactitem}
 \end{rSection}
 
@@ -36,13 +28,13 @@
 \begin{rSection}{Skills}
         \begin{tabular}{ l l l l l l l }
             Python & Typescript & Linux & SQLite & MongoDB & Git & C++\\  
-            Data Structures & Linear Algebra & NumPy & Vue.js & Node.js & React.js & Tailwindcss \\
+            React.js & Data Structures & Linear Algebra & NumPy & Vue.js & Node.js & Tailwindcss \\
             Django & JavaScript & CSS & HTML
         \end{tabular}
 \end{rSection}
 
 \begin{rSection}{Experience}
-    \textbf{Web Development Research Assistant}\hfill{ Sep.  2020 - May 2021}\\
+    \textbf{Web Development - Research Assistant}\hfill{ Sep.  2020 - May 2021}\\
     \textit{Information Systems Dept., Brigham Young University, Provo, UT} 
     \begin{compactitem}
         %\setlength\itemsep{0em}
@@ -52,7 +44,7 @@
             MongoDB.
         \item Presented progress in weekly stand-up meetings.
     \end{compactitem}
-\textbf{Machine Learning Research Assistant} \hfill{Oct. 2019
+\textbf{Machine Learning Support - Research Assistant} \hfill{Oct. 2019
 - Jun. 2020}\\
 \textit{Mechanical Engineering Dept., Brigham Young University, Provo, UT}
     \begin{compactitem}
