updated all resumes with better job descriptions

--- a/tex/ng.tex
+++ b/tex/ng.tex
@@ -27,8 +27,8 @@
 %skills
 \begin{rSection}{Skills}
         \begin{tabular}{ l l l l l l l }
-            Python & Typescript & SQLite & MongoDB & Linux & Git & C++\\  
-            Data Structures & Django & NumPy & Vue.js & Node.js & React.js & Tailwindcss \\
+            Vue.js & Typescript & SQLite & MongoDB & Linux & Git & C++\\  
+            Python & Data Structures & Django & NumPy & Node.js & React.js & Tailwindcss \\
             Linear Algebra & JavaScript & CSS & HTML
         \end{tabular}
 \end{rSection}
