reworked resume with Linda and Mike's suggestions

--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -26,10 +26,14 @@
 
 %skills
 \begin{rSection}{Skills}
-        \begin{tabular}{ l l l l l l l }
-            Python & JavaScript & Java &  SQLite & MongoDB & Linux & Git \\
-            Data Structures & Vue.js & Django & NumPy & Node.js & React.js & Tailwindcss \\
-            Linear Algebra & Typescript & C++ & HTML5 & CSS
+    \textbf{Highly Proficient}\\
+        \begin{tabular}{ l l l l l l l l }
+            Python & JavaScript & Linux & Git & Data Structures & Vue.js &  Tailwindcss & CSS\\
+            Linear Algebra  & HTML5 
+        \end{tabular}\\\\
+    \textbf{Proficient}\\
+        \begin{tabular}{ l l l l l l l l l }
+            Java &  SQLite & MongoDB & Django & NumPy & Node.js & React.js & Typescript & C++ 
         \end{tabular}
 \end{rSection}
 
@@ -38,51 +42,51 @@
     \textit{Information Systems Dept., Brigham Young University, Provo, UT} 
     \begin{compactitem}
         %\setlength\itemsep{0em}
-        \item Designed and developed an experiment to test and analyze participant interruptive
-            multitasking performance, using Vue.js, Express.js, and MongoDB.
-        \item Drove collaboration by sharing progress and insights in weekly stand-up meetings.
+        \item Designed and produced a web application to test and analyze participant interruptive
+            multitasking performance with A/B testing.
+        \item Developed a full-stack, multiple-choice form creation and management system with
+            Vue.js, Express.js and MongoDB.
     \end{compactitem}
 \textbf{Machine Learning Support - Research Assistant} \hfill{Oct. 2019
 - Jun. 2020}\\
 \textit{Mechanical Engineering Dept., Brigham Young University, Provo, UT}
     \begin{compactitem}
-        \item Built and maintained a JupyterHub Notebook server on RHEL with an Apache reverse
-            proxy for a team of several data scientists.
+        \item Reduced run time by hours and enabled ML models to run remotely by centralizing
+            computational resources to our high-performance server using JupyterHub and web
+            protocols.
     \end{compactitem}
 \textbf{Mongolian Teacher} \hfill {Sep. 2018 - Sep. 2019}\\
 \textit{Missionary Training Center, Provo, UT} 
     \begin{compactitem}
-        \item Created and maintained a website to simplify and centralize area resources and
-            materials.
-        \item Led weekly teacher coordination meetings.
+        \item Taught Mongolian to groups of 6-10 missionaries in an immersive 10-week language
+            course.
+        \item Improved efficiency in planning by creating a website to centralize teaching
+            resources and materials.
     \end{compactitem}
 \textbf{Product Quality Control and Regulatory Teammate}    \hfill {Jan. 2018 -
 Apr. 2018}\\
 \textit{Golub Corporation, Schenectady, NY}                 \hfill {Jan. 2015 -
 Dec. 2015}  
     \begin{compactitem}
-        \item Built JavaScript web application for several managers to automate the new nutrition label
-            validation process.
-        \item Improved data entry efficiency over 300\% with Microsoft VBA scripting.
+        \item Automated nutrition label verification with a JavaScript web application for product
+            category managers, saving roughly 30 seconds for each label while improving accuracy.
+        \item Transformed data entry in Excel from a 2-minute process to 15 seconds, with
+            VBA scripting.
     \end{compactitem}
 \end{rSection}
 
 %Projects
-\begin{rSection}{Projects}
-    \textbf{Multiple Choice Form Content Management System}
-    (\href{https://forms.jonathanwilding.com}{forms.jonathanwilding.com}) \hfill{Apr. 2021}
-    \begin{compactitem}
-        \item Developed a full-stack, multiple-choice form creation and management system, with
-            Vue.js, Express.js and MongoDB.
-    \end{compactitem}
+\begin{rSection}{Personal Projects}
     \textbf{The Movie Game} (\href{https://movies.jonathanwilding.com}{movies.jonathanwilding.com}) \hfill{Mar. 2021}
     \begin{compactitem}
-        \item Created a front-end actor-movie game with JavaScript, which queries the TMDB API.
+        \item  Implemented a family word game as a front-end web app that uses JavaScript to query
+            and display results from the TMDB API, validating the results per the rules of The
+            Movie Game.
     \end{compactitem}
     \textbf{SVD Image Compression} \hfill{Nov. 2019}
     \begin{compactitem}
-        \item Built python class to compute SVD of a matrix, using Numpy and Scipy libraries.
-            Applied SVD to compress image data by reducing data complexity on the matrix level.
+        \item Compressed image data by several orders of magnitude using a hand-coded python class
+            to compute the SVD of a matrix.
     \end{compactitem}
 \end{rSection}
 
