added the hcl profile with my picture, I used smallpdf to just insert the images over top my pdf which I'd increased some spacing and added a couple of skills.

--- a/tex/hcl_zuragtai.tex
+++ b/tex/hcl_zuragtai.tex
@@ -1,20 +1,20 @@
 %header
 \documentclass{resume} % Use the custom resume.cls style
 \usepackage{paralist}
-\usepackage{hyperref}
+%\usepackage{hyperref}
+\usepackage{graphicx}
 
-\usepackage[left=0.75in,top=0.5in,right=0.75in,bottom=0.5in]{geometry} % Document margins
+\usepackage[left=0.75in,top=1.25in,right=0.75in,bottom=0.5in]{geometry} % Document margins
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
+
 \name{Jonathan Wilding} % Your name
 
-\address{jonathan.r.wilding@gmail.com $\diamond\;$ (385)482-5644 }%\\} % 
-\address{
-linkedin.com/in/j-wilding $\diamond\;$
-github.com/j-wilding
-}
+\address{jonathan.wilding@hcl.com $\diamond\;$ (385)482-5644 }%\\} % 
+\address{ linkedin.com/in/j-wilding $\diamond\;$ github.com/j-wilding }
 \begin{document}
+\\~\\
 
 %education
 \begin{rSection}{Education}
